--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,13 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Fields | 2019</title>
 
+    <meta name="author" content="Fields & Mutabor" />
+    <meta name="copyright" content="Fields & Mutabor" />
+    <meta property="og:image:width" content="1842" />
+    <meta property="og:image:height" content="976" />
+    <meta property="og:image" content="%PUBLIC_URL%/og.png" />
+    <meta property="og:title" content="Fields" />
+
     <link rel="stylesheet" type="text/css" charset="UTF-8" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" />
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
 
