--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,9 @@
 
     <meta name="author" content="Fields & Mutabor" />
     <meta name="copyright" content="Fields & Mutabor" />
-    <meta property="og:image:width" content="1842" />
-    <meta property="og:image:height" content="976" />
-    <meta property="og:image" content="%PUBLIC_URL%/og.png" />
+    <meta property="og:image:width" content="1920" />
+    <meta property="og:image:height" content="1010" />
+    <meta property="og:image" content="%PUBLIC_URL%/shapka_1920.png" />
     <meta property="og:title" content="Fields" />
 
     <link rel="stylesheet" type="text/css" charset="UTF-8" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" />
