--- a/public/index.html
+++ b/public/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Fields | 2019</title>
+    <title>Fields | 2020</title>
 
     <meta name="author" content="Fields & Mutabor" />
     <meta name="copyright" content="Fields & Mutabor" />
-    <meta property="og:image:width" content="1920" />
-    <meta property="og:image:height" content="1010" />
-    <meta property="og:image" content="%PUBLIC_URL%/shapka_1920.png" />
+    <meta property="og:image:width" content="1074" />
+    <meta property="og:image:height" content="480" />
+    <meta property="og:image" content="%PUBLIC_URL%/ish2.jpg" />
     <meta property="og:title" content="Fields" />
 
     <link rel="stylesheet" type="text/css" charset="UTF-8" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" />
