--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,9 @@
 
     <meta name="author" content="Fields & Mutabor" />
     <meta name="copyright" content="Fields & Mutabor" />
-    <meta property="og:image:width" content="1074" />
-    <meta property="og:image:height" content="480" />
-    <meta property="og:image" content="%PUBLIC_URL%/ish2.jpg" />
+    <meta property="og:image:width" content="2000" />
+    <meta property="og:image:height" content="1046" />
+    <meta property="og:image" content="%PUBLIC_URL%/DACHA_fb_poster.jpg" />
     <meta property="og:title" content="Fields" />
 
     <link rel="stylesheet" type="text/css" charset="UTF-8" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" />
